feat: change email API
