# src/user/user.routes.js
@@ -8,6 +8,9 @@ const router = express.Router();
 router.get("/", asyncWrapper(UserController.index));
 router.put("/", asyncWrapper(UserController.update));
 
+router.post('/email-change', asyncWrapper(UserController.emailChange));
+router.post('/verify-email-otp', asyncWrapper(UserController.emailVerifyOTP));
+
 router.put('/updatePicture', storeFiles("media/users", "profileImage", "single"), asyncWrapper(UserController.userProfilePictureUpdate));
 
 router.post("/changePassword", asyncWrapper(UserController.changePassword));
